// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render centered text single line text center 1`] = `
"<p>
</p><div style=\\"text-align: center\\">  Test123
</div>
<p></p>
"
`;

exports[`render centered text text center in text center 1`] = `
"<p>
</p><div style=\\"text-align: center\\">  test 
</div>
 wtf 
<div style=\\"text-align: center\\">  test 
</div>
<p></p>
"
`;

exports[`render centered text text center with some text before and after 1`] = `
"<p>this should not be in text center 
</p><div style=\\"text-align: center\\">  yeet 
</div>
 after text<p></p>
"
`;

exports[`render centered text use bold text 1`] = `
"<p>
</p><div style=\\"text-align: center\\"> 
<strong>test</strong>
</div>
<p></p>
"
`;

exports[`render centered text use bold text single line 1`] = `
"<p>
</p><div style=\\"text-align: center\\">  
<strong>bold</strong>
</div>
<p></p>
"
`;

exports[`render centered text use heading 1`] = `
"<p>
</p><div style=\\"text-align: center\\"> 
<h1>test</h1>
</div>
<p></p>
"
`;

exports[`render centered text wrap text center 1`] = `
"<p>
</p><div style=\\"text-align: center\\">  yeet 
</div>
<p></p>
"
`;

exports[`render left allignment text text-left 1`] = `
"<p>
</p><div style=\\"text-align: left\\">  Test123
</div>
<p></p>
"
`;

exports[`render right allignment text text-right 1`] = `
"<p>
</p><div style=\\"text-align: right\\">  Test123
</div>
<p></p>
"
`;

exports[`render youtube blocks repeated youtube 1`] = `
"<p>
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 
<div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 :youtube http://www.youshit.com<p></p>
"
`;

exports[`render youtube blocks repeated youtube with text before and after 1`] = `
"<p><strong>bold</strong> string before youtube 
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/52c_QSg64fs\\"></iframe>
</div>
 after youtube 
<div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/waefawefwaef\\"></iframe>
</div>
 <em>italics</em>
soft new line<p></p>
<p>new line</p>
"
`;

exports[`render youtube blocks youtube with timestamp 1`] = `
"<p>
</p><div class=\\"youtube-video\\">
<iframe type=\\"text/html\\" src=\\"https://www.youtube.com/embed/IJhgZBn-LHg?t=712\\"></iframe>
</div>
<p></p>
"
`;
